--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <a href="#" class="logo">Team Park</a>
             <a href="#" class="logo"></a>
             <ul class="nav-menu">
-                <li><a href="#home">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="Map.html">Map</a></li>
+                <li><a href="map.html">Map</a></li>
                 <li><a href="#FutureInovation">Future Inovation</a></li>
             </ul>
         </div>
@@ -28,7 +28,7 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="left-aligned-div">
-             <img src="app.png" width="350" height="500">
+
             </div>
         
             <div class="right-aligned-div">
