--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Team park</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
@@ -27,12 +28,12 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="container">
-            <div class="left-aligned-div">
-
+            <div class="center-div">
+                <img src="map.png" width="300" height="300"/>
             </div>
         
-            <div class="right-aligned-div">
-                <p class="textmakeup">Welcome to <strong>Team Park</strong> 🗺️</p>
+            <div class="center-div">
+                <p class="textmakeup">Welcome to <strong>Team Park</strong></p>
                 <p class="textmakeup2"> Revolutionizing the Parking Industry One Parking Spot at a Time.</p>
             </div>
 
