--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="map.html">Map</a></li>
-                <li><a href="#FutureInovation">Future Inovation</a></li>
+                <li><a href="futureinovation.html">Future Inovation</a></li>
             </ul>
         </div>
     </nav>
@@ -30,9 +30,6 @@
         <div class="container">
             <div class="center-div">
                 <img src="map.png" width="300" height="300"/>
-            </div>
-        
-            <div class="center-div">
                 <p class="textmakeup">Welcome to <strong>Team Park</strong></p>
                 <p class="textmakeup2"> Revolutionizing the Parking Industry One Parking Spot at a Time.</p>
             </div>
@@ -46,25 +43,25 @@
     <section id="about" class="about">
         <div class="container">
             <h2>About Us</h2>
-            <p>Our mission is to provide the best parking experience to people who need to park their car on the ASU Campus</p>
+            <p>Our mission is to provide the best parking experience to people who need to find sutiable parking places no matter where they are. Our app shows you currently open parking spaces so you know where you need to go.</p>
         </div>
     </section>
 
     <!-- Services Section -->
-    <section id="map" class="map">
+    <section id="service" class="service">
         <div class="container">
             <h2>Our Services</h2>
-            <div class="map-box">
+            <div class="service-box">
                 <h3>Parking Radar</h3>
-                <p>Give you ultimate peace of mind giving you avaliable parking spots in the area</p>
+                <p>Ultimate peace of mind and comfort knowing you can always find a parking spot.</p>
             </div>
-            <div class="map-box">
+            <div class="service-box">
                 <h3>Ease of Use</h3>
-                <p>Our app is easy and always improving to give you the best experience</p>
+                <p>Our app is easy and always improving to give you the best experience possible</p>
             </div>
-            <div class="map-box">
-                <h3>24/7 Support</h3>
-                <p>24/7 Guaranteed Accurate and Detailed Maps</p>
+            <div class="service-box">
+                <h3>100% Accuracy 24/7.</h3>
+                <p>Guaranteed accurate and detailed maps thanks to our state of the art equipment</p>
             </div>
         </div>
     </section>
@@ -73,8 +70,10 @@
     <section id="contact" class="contact">
         <div class="container">
             <h2>Got a Question? Contact Us</h2>
-            <p>Reach out to us at <a href="mailto:info@mycompany.com">info@mycompany.com</a>.</p>
+            <p>Reach out to us at <a href="mailto:parking@teampark.org">parking@teampark.org</a>.</p>
             <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
         </div>
     </section>
 
