--- a/map.html
+++ b/map.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Team park</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -19,10 +19,43 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="map.html">Map</a></li>
-                <li><a href="futureinovation.html">Future Inovation</a></li>
+                <li><a href="#FutureInnovation">Future Inovation</a></li>
             </ul>
         </div>
     </nav>
+
+    <!-- Map -->
+     <div class="background">
+        <div class="parkingbox">
+            <div class="number">1</div>
+            <div class="status">Status: Free</div>
+            <button type="button" class="edit">Edit</button>
+        </div>
+        <div class="parkingbox">
+            <div class="number">2</div>
+        </div>
+        <div class="parkingbox">
+            <div class="number">3</div>
+        </div>
+        <div class="parkingbox">
+            <div class="number">4</div>
+        </div>
+        <div class="parkingbox">
+            <div class="number">5</div>
+        </div>
+        <div class="parkingbox">
+            <div class="number">6</div>
+        </div>
+        <div class="parkingbox">
+            <div class="number">7</div>
+        </div>
+        <div class="parkingbox">
+            <div class="number">8</div>
+        </div>
+        <div class="parkingbox">
+            <div class="number">9</div>
+        </div>
+     </div>
 
     <!-- Hero Section -->
     <section id="home" class="hero">
@@ -37,34 +70,6 @@
             </div>
 
             
-        </div>
-    </section>
-
-
-    <!-- About Section -->
-    <section id="about" class="about">
-        <div class="container">
-            <h2>About Us</h2>
-            <p>Our mission is to provide the best parking experience to people who need to park their car on the ASU Campus</p>
-        </div>
-    </section>
-
-    <!-- Services Section -->
-    <section id="service" class="service">
-        <div class="container">
-            <h2>Our Services</h2>
-            <div class="service-box">
-                <h3>Parking Radar</h3>
-                <p>Give you ultimate peace of mind giving you avaliable parking spots in the area</p>
-            </div>
-            <div class="service-box">
-                <h3>Ease of Use</h3>
-                <p>Our app is easy and always improving to give you the best experience</p>
-            </div>
-            <div class="service-box">
-                <h3>24/7 Support</h3>
-                <p>24/7 Guaranteed Accurate and Detailed Maps</p>
-            </div>
         </div>
     </section>
 
