--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             <a href="#" class="logo"></a>
             <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#about">About</a></li>
                 <li><a href="map.html">Map</a></li>
                 <li><a href="futureinovation.html">Future Inovation</a></li>
             </ul>
@@ -60,7 +59,7 @@
                 <p>Our app is easy and always improving to give you the best experience possible</p>
             </div>
             <div class="service-box">
-                <h3>100% Accuracy 24/7.</h3>
+                <h3>100% Accuracy</h3>
                 <p>Guaranteed accurate and detailed maps thanks to our state of the art equipment</p>
             </div>
         </div>
