--- a/futureinovation.html
+++ b/futureinovation.html
@@ -14,8 +14,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="container">
-            <a href="#" class="logo">Team Park</a>
-            <a href="#" class="logo"></a>
+            <a href="index.html" class="logo">Team Park</a>
             <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="map.html">Map</a></li>
@@ -30,7 +29,7 @@
             <div class="center-div">
                 <img src="mission.png" width="300" height="300"/>
                 <p class="textmakeup">Our <strong>Mission</strong></p>
-                <p class="textmakeup2">Here at Team Park we are dedicated to solving and fixing everyday issues that surround us in our day to day lives.</p>
+                <p class="textmakeup2">Here at Team Park we strive to solve everyday issues that surround us in our day to day lives.</p>
             </div>
 
             
