--- a/map.html
+++ b/map.html
@@ -13,8 +13,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="container">
-            <a href="#" class="logo">Team Park</a>
-            <a href="#" class="logo"></a>
+            <a href="index.html" class="logo">Team Park</a>
             <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="map.html">Map</a></li>
