--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="container">
-            <a href="#" class="logo">Team Park</a>
-            <a href="#" class="logo"></a>
+            <a href="index.html" class="logo">Team Park</a>
             <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="map.html">Map</a></li>
@@ -83,5 +81,6 @@
         </div>
     </footer>
 
+    <script src="index.js"></script>
 </body>
 </html>
