--- a/map.html
+++ b/map.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Team park</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -42,14 +42,14 @@
             function multiple(){
                 const questionDiv = document.getElementById('text');
                 questionDiv.innerHTML = `
-                    <div class="status" id="text" style="font-size: 20px; color: green">Status: Free</div>
+                    <div class="status" id="text" style="font-size: 30px; color: rgb(66, 234, 136)">Status: Free</div>
                     <button onclick="changeTextColor()" id="button" type="button" class="edit">Edit</button>
                 `;
             }
             function multiple2(){
                 const questionDiv = document.getElementById('text');
                 questionDiv.innerHTML = `
-                    <div class="status" id="text" style="font-size: 20px; color: red;" >Status: Occupied</div>
+                    <div class="status" id="text" style="font-size: 30px; color: red;" >Status: Occupied</div>
                     <button onclick="changeTextColor()" id="button" type="button" class="edit">Edit</button>
                 `;
             }
@@ -72,14 +72,14 @@
             function multiple3(){ 
                 const questionDiv = document.getElementById('text1'); 
                 questionDiv.innerHTML = `
-                    <div class="status" id="text1" style="font-size: 20px; color: green;">Status: Free</div> 
+                    <div class="status" id="text1" style="font-size: 30px; color: rgb(66, 234, 136);">Status: Free</div> 
                     <button onclick="changeTextColor1()" id="button1" type="button" class="edit">Edit</button> 
                 `;
             }
             function multiple4(){ 
                 const questionDiv = document.getElementById('text1'); 
                 questionDiv.innerHTML = `
-                    <div class="status" id="text1" style="font-size: 20px; color: red;" >Status: Occupied</div> 
+                    <div class="status" id="text1" style="font-size: 30px; color: red;" >Status: Occupied</div> 
                     <button onclick="changeTextColor1()" id="button1" type="button" class="edit">Edit</button> 
                 `;
             }
@@ -102,14 +102,14 @@
             function multiple5(){ 
                 const questionDiv = document.getElementById('text2'); 
                 questionDiv.innerHTML = `
-                    <div class="status" id="text2" style="font-size: 20px; color: green;">Status: Free</div> 
+                    <div class="status" id="text2" style="font-size: 30px; color: rgb(66, 234, 136);">Status: Free</div> 
                     <button onclick="changeTextColor2()" id="button2" type="button" class="edit">Edit</button> 
                 `;
             }
             function multiple6(){ 
                 const questionDiv = document.getElementById('text2'); 
                 questionDiv.innerHTML = `
-                    <div class="status" id="text2" style="font-size: 20px; color: red;" >Status: Occupied</div> 
+                    <div class="status" id="text2" style="font-size: 30px; color: red;" >Status: Occupied</div> 
                     <button onclick="changeTextColor2()" id="button2" type="button" class="edit">Edit</button> 
                 `;
             }
@@ -132,14 +132,14 @@
             function multiple7(){ 
                 const questionDiv = document.getElementById('text3'); 
                 questionDiv.innerHTML = `
-                    <div class="status" id="text3" style="font-size: 20px; color: green;">Status: Free</div> 
+                    <div class="status" id="text3" style="font-size: 30px; color: rgb(66, 234, 136);">Status: Free</div> 
                     <button onclick="changeTextColor3()" id="button3" type="button" class="edit">Edit</button> 
                 `;
             }
             function multiple8(){ 
                 const questionDiv = document.getElementById('text3'); 
                 questionDiv.innerHTML = `
-                    <div class="status" id="text3" style="font-size: 20px; color: red;" >Status: Occupied</div> 
+                    <div class="status" id="text3" style="font-size: 30px; color: red;" >Status: Occupied</div> 
                     <button onclick="changeTextColor3()" id="button3" type="button" class="edit">Edit</button> 
                 `;
             }
@@ -162,14 +162,14 @@
             function multiple9(){ 
                 const questionDiv = document.getElementById('text4'); 
                 questionDiv.innerHTML = `
-                    <div class="status" id="text4" style="font-size: 20px; color: green;">Status: Free</div> 
+                    <div class="status" id="text4" style="font-size: 30px; color: rgb(66, 234, 136);">Status: Free</div> 
                     <button onclick="changeTextColor4()" id="button4" type="button" class="edit">Edit</button> 
                 `;
             }
             function multiple10(){ 
                 const questionDiv = document.getElementById('text4'); 
                 questionDiv.innerHTML = `
-                    <div class="status" id="text4" style="font-size: 20px; color: red;" >Status: Occupied</div> 
+                    <div class="status" id="text4" style="font-size: 30px; color: red;" >Status: Occupied</div> 
                     <button onclick="changeTextColor4()" id="button4" type="button" class="edit">Edit</button> 
                 `;
             }
@@ -192,14 +192,14 @@
             function multiple11(){ 
                 const questionDiv = document.getElementById('text5'); 
                 questionDiv.innerHTML = `
-                    <div class="status" id="text5" style="font-size: 20px; color: green;">Status: Free</div> 
+                    <div class="status" id="text5" style="font-size: 30px; color: rgb(66, 234, 136);">Status: Free</div> 
                     <button onclick="changeTextColor5()" id="button5" type="button" class="edit">Edit</button> 
                 `;
             }
             function multiple12(){ 
                 const questionDiv = document.getElementById('text5'); 
                 questionDiv.innerHTML = `
-                    <div class="status" id="text5" style="font-size: 20px; color: red;" >Status: Occupied</div> 
+                    <div class="status" id="text5" style="font-size: 30px; color: red;" >Status: Occupied</div> 
                     <button onclick="changeTextColor5()" id="button5" type="button" class="edit">Edit</button> 
                 `;
             }
@@ -222,14 +222,14 @@
             function multiple13(){ 
                 const questionDiv = document.getElementById('text6'); 
                 questionDiv.innerHTML = `
-                    <div class="status" id="text6" style="font-size: 20px; color: green;">Status: Free</div> 
+                    <div class="status" id="text6" style="font-size: 30px; color: rgb(66, 234, 136);">Status: Free</div> 
                     <button onclick="changeTextColor6()" id="button6" type="button" class="edit">Edit</button> 
                 `;
             }
             function multiple14(){ 
                 const questionDiv = document.getElementById('text6'); 
                 questionDiv.innerHTML = `
-                    <div class="status" id="text6" style="font-size: 20px; color: red;" >Status: Occupied</div> 
+                    <div class="status" id="text6" style="font-size: 30px; color: red;" >Status: Occupied</div> 
                     <button onclick="changeTextColor6()" id="button6" type="button" class="edit">Edit</button> 
                 `;
             }
@@ -252,14 +252,14 @@
             function multiple15(){ 
                 const questionDiv = document.getElementById('text7'); 
                 questionDiv.innerHTML = `
-                    <div class="status" id="text7" style="font-size: 20px; color: green;">Status: Free</div> 
+                    <div class="status" id="text7" style="font-size: 30px; color: rgb(66, 234, 136);">Status: Free</div> 
                     <button onclick="changeTextColor7()" id="button7" type="button" class="edit">Edit</button> 
                 `;
             }
             function multiple16(){ 
                 const questionDiv = document.getElementById('text7'); 
                 questionDiv.innerHTML = `
-                    <div class="status" id="text7" style="font-size: 20px; color: red;" >Status: Occupied</div> 
+                    <div class="status" id="text7" style="font-size: 30px; color: red;" >Status: Occupied</div> 
                     <button onclick="changeTextColor7()" id="button7" type="button" class="edit">Edit</button> 
                 `;
             }
@@ -282,14 +282,14 @@
             function multiple17(){ 
                 const questionDiv = document.getElementById('text8'); 
                 questionDiv.innerHTML = `
-                    <div class="status" id="text8" style="font-size: 20px; color: green;">Status: Free</div> 
+                    <div class="status" id="text8" style="font-size: 30px; color: rgb(66, 234, 136);">Status: Free</div> 
                     <button onclick="changeTextColor8()" id="button8" type="button" class="edit">Edit</button> 
                 `;
             }
             function multiple18(){ 
                 const questionDiv = document.getElementById('text8'); 
                 questionDiv.innerHTML = `
-                    <div class="status" id="text8" style="font-size: 20px; color: red;" >Status: Occupied</div> 
+                    <div class="status" id="text8" style="font-size: 30px; color: red;" >Status: Occupied</div> 
                     <button onclick="changeTextColor8()" id="button8" type="button" class="edit">Edit</button> 
                 `;
             }
