--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
             <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="map.html">Map</a></li>
-                <li><a href="futureinovation.html">Future Inovation</a></li>
+                <li><a href="futureinnovation.html">Future Inovation</a></li>
             </ul>
         </div>
     </nav>
+
 
     <!-- Hero Section -->
     <section id="home" class="hero">
