--- a/map.html
+++ b/map.html
@@ -17,11 +17,16 @@
             <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="map.html">Map</a></li>
-                <li><a href="futureinovation.html">Future Inovation</a></li>
+                <li><a href="futureinnovation.html">Future Innovation</a></li>
             </ul>
         </div>
     </nav>
 
+    <section id="about" class="about"></section>
+    <div class="container1">
+        <h1><center>Map Demo</center></h1>
+    </div>
+   </section>
 
     <!-- Map -->
      <div class="background">
@@ -296,7 +301,6 @@
             }
         </script>
      </div>
-    
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
