--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="map.html">Map</a></li>
-                <li><a href="futureinnovation.html">Future Inovation</a></li>
+                <li><a href="futureinnovation.html">Future Innovation</a></li>
             </ul>
         </div>
     </nav>
